# kanjibenkyo-elm

./: .gitignore  README.md  asset-manifest.json  index.html  service-worker.js
client/: elm.json
client/public/: index.html
client/src/: Api.elm  Color.elm  Kana.elm  Kanji.elm  Main.elm  Model.elm  Msg.elm  Page.elm  Ports.elm  Route.elm  Update.elm  User.elm  View.elm  ViewHelpers.elm  Word.elm  index.js
client/src/Page/: Basic.elm  Home.elm
client/src/Page/Kana/: Index.elm  Show.elm
client/src/Page/Kanji/: Card.elm  Index.elm  Show.elm  YomiTag.elm
db/: Seed.hs  Syntax.hs  kana.csv  kanji.csv  seed-db  seed-db.rkt
public/: index.html
scripts/: seed  start
server/: Cargo.toml  ChangeLog.md  README.md  package.yaml  stack.yaml
server-rust/: Cargo.toml
server-rust/migrations/2018-10-18-004748_create_kana/: down.sql
server-rust/migrations/2018-11-07-035135_create_users/: up.sql
server-rust/src/: main.rs
server/app/: Main.hs
server/migrations/2018-10-18-004748_create_kana/: down.sql  up.sql
server/migrations/2018-10-29-005215_create_kanji/: up.sql
server/src/: dbconn.rs  main.rs  schema.rs
server/src/Tables/: KanaTable.hs  KanjiTable.hs
server/src/controllers/: kana.rs  kanji.rs  user.rs
server/src/models/: kana.rs  kana_quiz.rs  kanji.rs  mod.rs  user.rs
src/: Kana.elm  Kanji.elm  Main.elm  Word.elm
static/css/: main.b430834b.chunk.css  main.b430834b.chunk.css.map
static/js/: main.8a622031.chunk.js  main.8a622031.chunk.js.map  main.aef2f898.chunk.js  main.aef2f898.chunk.js.map  vendors~main.f8b4eb45.chunk.js.map
(+2 files in other folders)
