[package]
name = "server"
version = "0.1.0"
authors = ["Zach Stone <zach@zerovolts.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "*"
rocket_cors = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "*", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"